@@ -108,18 +108,13 @@ if test "$OPROFILE_25" = "no"; then
 	eval KVERS=`gcc -I$KINC -E -dM $KINC/linux/version.h | grep -w UTS_RELEASE | awk '{print $3}'`
 	AC_MSG_RESULT([$KVERS])
 	case "$KVERS" in
-	2.2.*|2.4.*|2.5.*) ;;
+	2.2.*|2.4.*) ;;
 	*) AC_MSG_ERROR([Unsupported kernel version])
 	esac
 
 	dnl Check for the minimal kernel version supported
 	AC_MSG_CHECKING([kernel version])
 	AX_KERNEL_VERSION(2, 2, 10, <=, AC_MSG_RESULT([ok]), AC_MSG_ERROR([check html documentation install section]))
-
-	dnl Check if we need to build the module with extra flags
-	dnl FIXME this fix 2.5.19 and 2.5.20 build but perhaps its not the right way
-	AC_MSG_CHECKING([whether module compilation need -DMODULE])
-	AX_KERNEL_VERSION(2, 5, 19, >=, AC_MSG_RESULT([no]), AC_MSG_RESULT([yes]); EXTRA_CFLAGS_MODULE="$EXTRA_CFLAGS_MODULE -DMODULE")
 
 	dnl linux/spinlock.h added at some point in past
 	AC_MSG_CHECKING([for $KINC/linux/spinlock.h])
