@@ -22,11 +22,7 @@
 extern uint do_path_hash_2_4(struct dentry * dentry, struct vfsmount * vfsmnt);
 #define hash_path(f) do_path_hash_2_4((f)->f_dentry, (f)->f_vfsmnt)
 #define request_region_check request_region
-#if V_BEFORE(2, 5, 23)
 #define op_cpu_id() cpu_number_map(smp_processor_id())
-#else
-#define op_cpu_id() smp_processor_id()
-#endif
 #define GET_VM_OFFSET(v) ((v)->vm_pgoff << PAGE_SHIFT)
 #define PTRACE_OFF(t) ((t)->ptrace &= ~PT_DTRACE)
 #define lock_execve() do { } while (0)
